[gd_scene load_steps=4 format=3 uid="uid://bm1ht3mndadas"]

[ext_resource type="Script" path="res://addons/clyde/editor/tools/csv_exporter.gd" id="1_06a4e"]

[sub_resource type="Image" id="Image_ok16u"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_hik2o"]
image = SubResource("Image_ok16u")

[node name="CsvExporterWindow" type="PopupPanel"]
size = Vector2i(608, 418)
visible = true
script = ExtResource("1_06a4e")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="csv_file_container" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="file_label" type="Label" parent="MarginContainer/VBoxContainer/csv_file_container"]
layout_mode = 2
text = "CSV File"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/csv_file_container"]
layout_mode = 2
tooltip_text = "File to store CSV lines. Previous content will be replaced."

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/csv_file_container/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "res://.csv"
editable = false

[node name="file_btn" type="Button" parent="MarginContainer/VBoxContainer/csv_file_container/HBoxContainer"]
layout_mode = 2
text = "Select file"

[node name="warning" type="HBoxContainer" parent="MarginContainer/VBoxContainer/csv_file_container"]
visible = false
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/csv_file_container/warning"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("ImageTexture_hik2o")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/csv_file_container/warning"]
layout_mode = 2
theme_override_colors/font_color = Color(0.804, 0.727, 0.636, 1)
text = "Selected file already exists. Content will be overwritten."

[node name="options_container" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="options" type="Label" parent="MarginContainer/VBoxContainer/options_container"]
layout_mode = 2
text = "Option"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/options_container"]
layout_mode = 2
theme_override_constants/h_separation = 20
columns = 2

[node name="locale_label" type="Label" parent="MarginContainer/VBoxContainer/options_container/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The locale of the original dialogue to be used in the header. It can be any value. Check Godot's supported locales."
mouse_filter = 1
text = "Locale"

[node name="header_locale" type="LineEdit" parent="MarginContainer/VBoxContainer/options_container/GridContainer"]
layout_mode = 2
text = "en"
placeholder_text = "en"

[node name="delimiter_label" type="Label" parent="MarginContainer/VBoxContainer/options_container/GridContainer"]
layout_mode = 2
tooltip_text = "Symbol used to separate columns. Default ','. Has to be one character."
mouse_filter = 1
text = "Column delimiter"

[node name="delimiter" type="LineEdit" parent="MarginContainer/VBoxContainer/options_container/GridContainer"]
layout_mode = 2
text = ","
placeholder_text = ","
max_length = 1

[node name="include_metadata" type="CheckBox" parent="MarginContainer/VBoxContainer/options_container"]
layout_mode = 2
tooltip_text = "Adds extra line to CSV file with extra data. (i.e. speaker and tags)"
text = "Include metadata"

[node name="include_header" type="CheckBox" parent="MarginContainer/VBoxContainer/options_container"]
layout_mode = 2
tooltip_text = "Include file header (id, locale)"
button_pressed = true
text = "Include header"

[node name="buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="cancel" type="Button" parent="MarginContainer/VBoxContainer/buttons"]
layout_mode = 2
text = "Cancel"

[node name="export_btn" type="Button" parent="MarginContainer/VBoxContainer/buttons"]
layout_mode = 2
text = "Export CSV"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="save_message" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/csv_file_container/HBoxContainer/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/csv_file_container/HBoxContainer/file_btn" to="." method="_on_file_btn_button_up"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/options_container/GridContainer/header_locale" to="." method="_on_header_locale_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/options_container/GridContainer/delimiter" to="." method="_on_delimiter_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/options_container/include_metadata" to="." method="_on_include_metadata_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/options_container/include_header" to="." method="_on_include_header_focus_entered"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/buttons/cancel" to="." method="_on_cancel_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/buttons/export_btn" to="." method="_on_export_btn_button_up"]
